--- a/css/product.css
+++ b/css/product.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&family=Nunito:wght@600&family=Source+Sans+Pro:wght@90&family=Berkshire+Swash&family=Fredericka+the+Great&family=Srisakdi:wght@700&display=swap&');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Source+Sans+Pro:wght@90&family=Berkshire+Swash&family=Fredericka+the+Great&family=Righteous&family=Quicksand&display=swap&');
 *{
     font-family: var(--remedyfont);
     padding: 0 ;
@@ -24,8 +24,8 @@ html{
     --mainblackbg:#2B2C28;
     --mainfont:'Berkshire Swash', cursive;
     --transparentfont:'Fredericka the Great', cursive;
-    --slantedfont:'Leckerli One', cursive;
-    --classyfont: 'Srisakdi', cursive;
+    --fatfont:'Righteous', cursive;
+    --thinfont:'Quicksand', sans-serif;
     --remedyfont:  'Nunito', sans-serif;
 }
 /* ---------------------------------BACKGROUND IMG---------------------- */    
@@ -59,7 +59,7 @@ header{
 /* Global title and paragraph setup for about and product section */
 .x-info-title{
     text-transform: capitalize;
-    font-family: var(--slantedfont);
+    font-family: var(--thinfont);
     font-size: 2.7rem;
     color: var(--shadoworange);
     margin-bottom: 50px;
@@ -137,7 +137,7 @@ li{
 /* First heading */
 .intro1{
     color: var(--headingintro);
-    font-family: var(--classyfont);
+    font-family: var(--thinfont);
     font-size: 3.5rem;
     padding: 100px 0 80px 0;
     animation: cuisine 4s;
@@ -161,7 +161,7 @@ li{
     color: var(--mainlyellow);
     font-weight: 500;
     animation:  6s intro3 ;
-    font-family: var(--transparentfont);
+    font-family: var(--remedyfont);
     text-transform: capitalize;
 }
 /* All animation effects for 1st, 2nd and 3rd heading */
@@ -181,7 +181,7 @@ li{
 /* Anchor tag link styling */
 a{
     color: #494947;
-    font-family: var(--slantedfont)
+    font-family: var(--fatfont)
 }
 /* ---------------------FIRST LINKBOX SETUP------------------- */
 /* linkbox used through out webpage */
